# evilassistant

./: .gitignore  ARM_COMPATIBILITY_SUMMARY.md  ARM_DEPENDENCY_CHECK.md  CONTINUOUS_TRANSCRIPTION_ANALYSIS.md  ENCRYPTION_GUIDE.md  HOME_ASSISTANT_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_PI_SETUP.md  QUICK_SMART_HOME_INTEGRATION.md  RASPBERRY_PI_SETUP.md  README.md  SERVICE_SETUP.md  SMART_HOME_SETUP.md  STT_OPTIMIZATION_CHANGES.md  TRANSCRIPTION_FEATURES.md  TTS_COMPARISON_AND_ROADMAP.md  TTS_PRIORITY_EXPLANATION.md  TTS_REFACTOR_SUMMARY.md  app.py  conversation_enhancer.py  create_demonic_voice.py  decode_transcripts.py  demonic_effects.py  device_discovery.py  discovered_devices.json  evil-assistant.service  find_demonic_voice.py  install_home_assistant.sh  install_missing_deps_pi.sh  install_service.sh  integrate_evil_assistant.py  main.py  pi_dependency_test.py  pyproject.toml  pyproject_improved.toml  quick_device_scan.py  service_manager.sh  setup_coqui_docker.py  (+29 more)
evilassistant/: README.md  __main__.py  assistant.py  assistant_clean.py  assistant_vad.py  async_assistant.py  audio_effects.py  audio_manager.py  audio_stream.py  audio_utils.py  config.py  config_improved.py  config_manager.py  config_pi.py  continuous_transcription.py  error_handling.py  evil_transcription_commands.py  gpio_controller.py  home_assistant_integration.py  privacy_manager.py  simple_smart_home.py  simple_vad.py  smart_home.py  speech_recognition.py  unified_command_processor.py  vad_audio.py  wake_word.py
evilassistant/tts/: __init__.py  (+4 more)
(+6 files in other folders)
