# ~/evilassistant/pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evilassistant"
version = "0.1.0"
description = "A demonic AI voice assistant powered by xAI Grok"
authors = [{name = "jkinman"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "faster-whisper>=0.10.0",  # Updated to faster-whisper
    "openai>=1.0.0",
    "piper-tts>=1.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "cryptography>=41.0.0",  # For transcript encryption
    "pyannote-audio>=3.1.0",  # For speaker diarization
]

[project.scripts]
evilassistant = "evilassistant.__main__:main"

[tool.setuptools]
packages = ["evilassistant"]
